# accparser

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile.am  README.md  acc_demo.cpp  main.cpp  omp_demo.cpp  test_omp.cpp
.github/workflows/: accparser.yml  gnu.yml  gun.yml  llvm.yml
docs/: _config.yml
src/: OpenACCASTConstructor.cpp  OpenACCASTConstructor.h  OpenACCIR.cpp  OpenACCIR.h  OpenACCIRToString.cpp  OpenACCKinds.h  accir_constructor.cpp  accir_constructor.h  acclexer.g4  accparser.g4  driver.cpp
tests/: CMakeLists.txt  acc_tester.cpp  parallel.txt  parallel_async.txt  parallel_attach.txt  parallel_copy.txt  parallel_default.txt  parallel_deviceptr.txt  parallel_firstprivate.txt  parallel_loop.txt  parallel_no_create.txt  parallel_num_workers.txt  parallel_present.txt  parallel_vector_length.txt  parallel_wait.txt  preprocess.cpp  test.sh
tests/base/: CMakeLists.txt  atomic.txt  atomic_fortran.txt  cache.txt  cache_fortran.txt  data.txt  data_fortran.txt  declare.txt  declare_fortran.txt  enter_data.txt  enter_data_fortran.txt  exit_data.txt  exit_data_fortran.txt  host_data.txt  host_data_fortran.txt  init.txt  init_fortran.txt  kernels.txt  kernels_fortran.txt  kernels_loop.txt  kernels_loop_fortran.txt  loop.txt  loop_fortran.txt  parallel.txt  parallel_fortran.txt  parallel_loop.txt  parallel_loop_fortran.txt  routine.txt  routine_fortran.txt  serial.txt  serial_fortran.txt  serial_loop.txt  serial_loop_fortran.txt  set.txt  set_fortran.txt  shutdown.txt  shutdown_fortran.txt  update.txt  update_fortran.txt  wait.txt  (+1 more)
tests/base/reference/: ref_atomic.txt  ref_atomic_fortran.txt  ref_cache.txt  ref_cache_fortran.txt  ref_data.txt  ref_data_fortran.txt  ref_declare.txt  ref_declare_fortran.txt  ref_enter_data.txt  ref_enter_data_fortran.txt  ref_exit_data.txt  ref_exit_data_fortran.txt  ref_host_data.txt  ref_host_data_fortran.txt  ref_init.txt  ref_init_fortran.txt  ref_kernels.txt  ref_kernels_fortran.txt  ref_kernels_loop.txt  ref_kernels_loop_fortran.txt  ref_loop.txt  ref_loop_fortran.txt  ref_parallel.txt  ref_parallel_fortran.txt  ref_parallel_loop.txt  ref_parallel_loop_fortran.txt  ref_routine.txt  ref_routine_fortran.txt  ref_serial.txt  ref_serial_fortran.txt  ref_serial_loop.txt  ref_serial_loop_fortran.txt  ref_set.txt  ref_set_fortran.txt  ref_shutdown.txt  ref_shutdown_fortran.txt  ref_update.txt  ref_update_fortran.txt  ref_wait.txt  ref_wait_fortran.txt
tests/gpubootcamp/: CMakeLists.txt  README.md  lab3_solutions_collapse_laplace2d.c
tests/gpubootcamp/reference/: ref_lab1_laplace2d.kernels.f90  ref_lab2_laplace2d.c  ref_lab2_laplace2d.f90  ref_lab2_solutions_laplace2d.c  ref_lab2_update_jacobi.c  ref_lab2_update_jacobi.f90  ref_lab2_update_solution_jacobi.c  ref_lab2_update_solution_laplace2d.c  ref_lab3_collapse_jacobi.f90  ref_lab3_jacobi.c  ref_lab3_laplace2d.c  ref_lab3_laplace2d.f90  ref_lab3_solutions_collapse_laplace2d.c  ref_lab3_solutions_collapse_laplace2d.f90  ref_lab3_solutions_tile_laplace2d.c  ref_lab3_solutions_tile_laplace2d.f90  ref_lab4_miniWeather_openacc.cpp  ref_lab5_miniWeather_openacc.cpp  ref_laplace2d.kernels.c  ref_miniprofiler_miniWeather_openacc_exr2.f90  ref_miniprofiler_miniWeather_openacc_exr3.f90  ref_miniprofiler_miniWeather_openacc_exr4.f90  ref_miniprofiler_miniWeather_openacc_exr5.f90  ref_rdf.cpp  ref_rdf.f90  ref_rdf_collapse.cpp  ref_rdf_data_directive.cpp  ref_rdf_gang.cpp  ref_rdf_gang_vector_length.cpp  ref_rdf_gang_vector_worker.cpp  ref_rdf_kernel_directive.cpp  ref_rdf_kernel_directive.f90  ref_rdf_orig.f90  ref_rdf_parallel_directive.cpp  ref_rdf_parallel_directive.f90  ref_solutions_miniWeather_openacc_exr3.cpp
tests/openacc-users-group/: CMakeLists.txt  README.md
tests/openacc-users-group/NAS_SHOC_OpenACC_2.5/: CMakeLists.txt
tests/openacc-users-group/NAS_SHOC_OpenACC_2.5/reference/: ref_ReduceFuncs.cpp  ref_StencilFuncs.cpp  ref_add.c  ref_add_sp.c  ref_adi.c  ref_bt.c  ref_erhs.c  ref_error_bt.c  ref_exact_rhs.c  ref_initialize.c  ref_l2norm.c  ref_lu.c  ref_mg.c  ref_rhs_bt.c  ref_rhs_lu.c  ref_rhs_sp.c  ref_sp.c  ref_ssor.c  ref_txinvr.c  ref_x_solve.c  ref_y_solve.c  ref_z_solve.c
tests/openacc-users-group/PolyBench-ACC/: CMakeLists.txt
tests/openacc-users-group/PolyBench-ACC/reference/: ref_adi.c  ref_atax.c  ref_bicg.c  ref_cholesky.c  ref_convolution-3d.c  ref_correlation.c  ref_covariance.c  ref_doitgen.c  ref_durbin.c  ref_dynprog.c  ref_fdtd-2d.c  ref_fdtd-apml.c  ref_floyd-warshall.c  ref_gemm.c  ref_gemver.c  ref_gesummv.c  ref_gramschmidt.c  ref_jacobi-1d-imper.c  ref_jacobi-2d-imper.c  ref_lu.c  ref_ludcmp.c  ref_mvt.c  ref_reg_detect.c  ref_seidel-2d.c  ref_symm.c  ref_syr2k.c  ref_syrk.c  ref_trisolv.c  ref_trmm.c
utils/omp-translator/: CMakeFiles.txt  OpenMPTranslator.cpp  OpenMPTranslator.h  README.md  driver.cpp
utils/runtime/: README.md
website/: CNAME  README.md  _config.yml  beautiful-jekyll-theme.gemspec  index.html
